fix: correct z-index fir user img

--- a/global/scss/style.css
+++ b/global/scss/style.css
@@ -248,7 +248,6 @@ button {
   width: 100px;
   position: relative;
   margin-right: 14px;
-  z-index: -1;
 }
 .about__user-img img {
   transition: 0.5s;
